force-app/main/default/objects/Activity/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <description>Interview date and time field</description>
    <inlineHelpText>Date and time of job interview.</inlineHelpText>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>