force-app/main/default/objects/Activity/fields/Interview_Content__c.field-meta.xml
<CustomField>
    <fullName>Interview_Content__c</fullName>
    <description>Knowing what topics will be covered helps the user to prepare for the interview.</description>
    <inlineHelpText>Select one that best fits the content of the interview.  General Interviews are &quot;get to know you.&quot; Technical are asking technical questions. Case interviews are common for consulting roles. In a case interview, the interviewer usually presents a scenario or problem—the “case”—and asks specific questions on how you would address its challenge(s).</inlineHelpText>
    <label>Interview Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>