force-app/main/default/objects/Activity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date of Interview</description>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>