force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <inlineHelpText>Recorded interviews are one sided where you are given questions and record your answers.  This is not when an interview records your interview with them.</inlineHelpText>
    <label>Interview Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Interview</fullName>
            </value>
            <value>
                <fullName>Online Interview</fullName>
            </value>
            <value>
                <fullName>In person Interview</fullName>
            </value>
            <value>
                <fullName>Recorded Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>