force-app/main/default/objects/Activity/fields/Name_or_Names_of_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Name_or_Names_of_Interviewer__c</fullName>
    <description>Field for the name of the interviewer.</description>
    <inlineHelpText>List interviewer or interviewers by name.</inlineHelpText>
    <label>Name or Names of Interviewer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>