force-app/main/default/objects/Activity/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Enable notes to be taken about interview</description>
    <inlineHelpText>Important notes about the interview.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>